--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "DiscogsShuffle",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -13,12 +14,18 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
+    "fetch-jsonp": "^1.1.3",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "react": "16.5.0",
+    "react-async": "^3.12.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-expo": "^5.0.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-expo": "^32.0.0"
   },
   "private": true
