--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fetch-jsonp": "^1.1.3",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "native-base": "^2.10.0",
     "react": "16.5.0",
     "react-async": "^3.12.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
