--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fetch-jsonp": "^1.1.3",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "moment": "^2.24.0",
     "native-base": "^2.10.0",
     "react": "16.5.0",
     "react-async": "^3.12.0",
