--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-expo": "^5.0.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-expo": "^32.0.0"
+    "jest-expo": "^32.0.0",
+    "react-native-dotenv": "^0.2.0"
   },
   "private": true
 }
