--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.5.0",
     "react-async": "^3.12.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-auto-height-image": "^1.0.5",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
